[project]
name = "blog-backend"
version = "0.1.0"
description = "Backend for my blog. Built with FastAPI and SQLAlchemy"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "sqlalchemy>=2.0.41",
    "PyYaml>=6.0.2"
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blog_backend", "blog_backend/blog", "blog_backend/db"]